kubernetes/gui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gui
  labels:
    app: gui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gui
  template:
    metadata:
      labels:
        app: gui
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - gui
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: gui
        image: josiahwolfoberholtzer/on-exactitude-in-science-gui:latest
        ports:
        - containerPort: 80
