kubernetes/janusgraph-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: janusgraph
  labels:
    app: janusgraph
spec:
  replicas: 3
  selector:
    matchLabels:
      app: janusgraph
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: janusgraph
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - janusgraph
            topologyKey: kubernetes.io/hostname
      containers:
      - name: janusgraph
        image: janusgraph/janusgraph:0.5.2
        livenessProbe:
          httpGet:
            path: /?gremlin=100-1
            port: 8182
          initialDelaySeconds: 5
          periodSeconds: 30
        ports:
        - containerPort: 8182
        resources:
          requests:
            cpu: 4000m
            memory: 4Gi
