kubernetes/api-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  clusterIP: None
  ports:
  - port: 8080
  selector:
    app: api
