kubernetes/gui-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gui
  name: gui
spec:
  clusterIP: None
  ports:
  - port: 8080
  selector:
    app: gui
