kubernetes/janusgraph-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: janusgraph
  name: janusgraph
spec:
  clusterIP: None
  ports:
  - port: 8182
    name: gremlin
  selector:
    app: janusgraph
