kubernetes/scylla-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scylla
  name: scylla
spec:
  clusterIP: None
  ports:
  - port: 9042
  selector:
    app: scylla
