kubernetes/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.on-exactitude-in.science
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 8080
        path: /
