kubernetes/gui-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gui
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: on-exactitude-in.science
    http:
      paths:
      - backend:
          serviceName: gui
          servicePort: 80
        path: /
