kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: on-exactitude-in-science
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.on-exactitude-in.science
    - on-exactitude-in.science
    secretName: echo-tls-prod
  rules:
  - host: api.on-exactitude-in.science
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 8080
        path: /
  - host: on-exactitude-in.science
    http:
      paths:
      - backend:
          serviceName: gui
          servicePort: 80
        path: /
